- Fixed copy and paste when one pic is in the copied objects
- Fixed crash in history of group/ungroup commands
- Ignore sticky objects when duplicating a page
- Fixed Object Effects are not correctly done (#64384)
- Fixed drawing of rect with round corners when zoomed and gradient filling
- Fixed no alpha channel set on mirrored pictures

Changes:
- Flip now works as in Gimp. Horizontal flip flips on y-axis
  vertical filp on x-axis
- Group objects: The grouped object is now in the z-order of the upperst
  object grouped and no longer on the top.
- Ungroup object: The objects are now in the z-order where the group object 
  was and no longer on top.
- If a page is shown more than once during a presentation add the time for 
  the duration instead of showing only the last duration.
- Use kspell2
- Now PresSpeed is into each page
- Now PageUp/PageDown during presentation go to beginning of the next/previous slide
- Each object effect can have it's own speed now
- Copy between kword/kpresenter
- Now we can configure header/footer by page
- Configure Custom Slide Show
- Add statistic variable

Changes after KPresenter 1.3 RC1
================================
- during a presentation variables on the sticky page were not updated (#67515)


Changes after KPresenter 1.3 beta 4
===================================
Fixes:
- Fixed When resizing a frame it does not snap to the grid (#63032)
- Fixed after resize/undo size of object is not the same
- Fixed after move/undo position of object is not the same
- Fixed resizing of poly line objects
- Fixed after reload of some objects moved up a little bit
- Fixed moving with key left used y grid
- Fixed header/footer moved in undo

Changes after KPresenter 1.3 beta 3
===================================
Fixes:
- Fixed cursor not blinking in some cases
- Fixed "blinking cursor erases formatting characters" bug
- "Adjust object to contents" works as intended now
- Purpose of the 'Notebar' is unknown (#63037)