@@ -15,6 +15,7 @@ Fixes:
 - Fixed Object Effects are not correctly done (#64384)
 - Fixed drawing of rect with round corners when zoomed and gradient filling
 - Fixed no alpha channel set on mirrored pictures
+- Fixed objects placed on wrong page after saving and loading in kpr file format
 
 Changes:
 - Flip now works as in Gimp. Horizontal flip flips on y-axis
